src/objects/PivLP_Log__c.object
<CustomObject>
    <fields>
        <fullName>Log_Time__c</fullName>
        <label>Log Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <label>Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_ID__c</fullName>
        <label>Request ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PivLP Log</label>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>PivLP Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PivLP Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>